force-app/main/default/objects/Parent__c/fields/Adhar_no__c.field-meta.xml
<CustomField>
    <fullName>Adhar_no__c</fullName>
    <label>Adhar no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>