force-app/main/default/objects/Parent__c/fields/Parent_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Address__c</fullName>
    <label>Parent Address</label>
    <type>TextArea</type>
</CustomField>