force-app/main/default/objects/Parent__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <label>Surname</label>
    <length>18</length>
    <type>Text</type>
</CustomField>